--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -73,3 +73,6 @@ jobs:
    # Run Linter against code base      
     - name: Super-Linter
       uses: github/super-linter@v4.8.1
+      env:
+          VALIDATE_PYTHON_BLACK = false
+          VALIDATE_PYTHON_FLAKE8 = false
