--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -74,5 +74,5 @@ jobs:
     - name: Super-Linter
       uses: github/super-linter@v4.8.1
       env:
-          VALIDATE_PYTHON_BLACK = false
-          VALIDATE_PYTHON_FLAKE8 = false
+          VALIDATE_PYTHON_BLACK: false
+          VALIDATE_PYTHON_FLAKE8: false
