--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -75,7 +75,7 @@ jobs:
       uses: github/super-linter@v4.8.1
       env:
           VALIDATE_PYTHON_BLACK: false
-          VALIDATE_PYTHON_FLAKE8: false
-          # VALIDATE_PYTHON_MYPY: true
+          # VALIDATE_PYTHON_FLAKE8: false
+          # VALIDATE_PYTHON_MYPY: false
           # use the linter, but don't make it necessary to pass to validate code
           DISABLE_ERRORS: true
